# dao-forge

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
init/: canister_ids_args.did  init_args.did  network_call_args.did
scripts/: deploy-canisters.sh  generateRandomPrincipals.js
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/models/: configuration.rs  configuration_tests.rs  dao.rs  dao_tests.rs  mod.rs  user.rs  user_tests.rs
src/common/src/repositories/: configuration_repository.rs  mod.rs
src/common/src/services/: configuration_service.rs  configuration_service_tests.rs  dao_association_service.rs  dao_association_service_tests.rs  dao_discovery_service.rs  dao_discovery_service_tests.rs  documents_storage_service.rs  documents_storage_service_tests.rs  inter_canister_service.rs  inter_canister_service_tests.rs  mod.rs  network_call_service.rs  network_call_service_tests.rs  sogc_publication_service.rs  sogc_publication_service_tests.rs
src/common/src/templates/: mod.rs  sogc_publication_template.rs  sogc_publication_template_tests.rs
src/common/src/types/: dao_args.rs  document_args.rs  email_args.rs  mod.rs  sogc_mutation.rs  sogc_publication_args.rs
src/common/src/utils/: date.rs  date_tests.rs
src/dao-association/: Cargo.toml  dao-association.did
src/dao-association/src/: lib.rs
src/dao-association/src/controllers/: dao_association_controller.rs  init.rs  mod.rs
src/dao-association/src/models/: dao_association.rs  init_args.rs  mod.rs
src/dao-association/src/repositories/memories/: memory_manager.rs  mod.rs
src/dao-association/src/services/: dao_association_service.rs  inter_canister_service.rs
src/dao-discovery-registry/: Cargo.toml  dao-discovery-registry.did
src/dao-discovery-registry/src/controller/: mod.rs  principal_dao_controller.rs
src/dao-discovery-registry/src/models/: mod.rs
src/dao-discovery-registry/src/repositories/: mod.rs  principal_dao_registry_repository.rs
src/dao-discovery-registry/src/repositories/memories/: memory_manager.rs
src/dao-discovery-registry/src/services/: mod.rs  principal_dao_registry_service.rs
src/dao-forge-backend/: Cargo.toml  dao-forge-backend.did
src/dao-forge-frontend/: package.json
src/dao-manager/: Cargo.toml  dao-manager.did
src/dao_agency/: Cargo.toml  dao_agency.did
src/dao_agency/src/: lib.rs
src/dao_agency/src/controller/: dao_controller.rs
src/dao_agency/src/controllers/: dao_controller.rs  init.rs  mod.rs
src/dao_agency/src/repositories/: configuration_repository.rs  configuration_repository_tests.rs  mod.rs
src/dao_agency/src/repositories/memories/: dao_agency_memory.rs  memory_manager.rs  mod.rs
src/dao_agency/src/services/: canister_management_service.rs  canister_management_service_tests.rs  dao_discovery_service.rs  inter_canister_service.rs  mod.rs
src/dao_agency/src/types/: dao_association.rs  mod.rs
src/dao_agency/tests/: dao_agency_controller_integration_tests.rs  dao_controller_integration_tests.rs
src/dao_association/: Cargo.toml  dao_association.did
src/dao_association/src/: lib.rs
src/dao_association/src/controllers/: dao_association_controller.rs  init.rs
src/dao_association/src/models/: dao_association.rs  dao_association_tests.rs  mod.rs
src/dao_association/src/models/presentation/: dao_association_presentation.rs  mod.rs
src/dao_association/src/repositories/: configuration_repository.rs  dao_association_repository.rs  dao_association_repository_tests.rs  mod.rs
src/dao_association/src/repositories/memories/: dao_memory.rs  memory_manager.rs
src/dao_association/src/services/: dao_association_service.rs  dao_association_service_tests.rs  dao_discovery_registry_service.rs  mod.rs
src/dao_association/src/types/: address_args.rs  dao_args.rs  mod.rs
src/dao_association/tests/: dao_controller_integration_tests.rs
src/dao_discovery/: Cargo.toml  dao_discovery.did
(+239 files in other folders)
