[workspace]
members = ["src/common",
    "src/dao_association",
    "src/dao_agency",
    "src/dao_discovery",
    "src/dao_sogc_publication",
    "src/documents_storage",
    "src/network_call",
    "src/voting"]
resolver = "2"

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6"
time = "0.3"