[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
candid.workspace = true
# Required otherwise the build will fail because it not find Deserialize derive inside the candid crate
serde.workspace = true
typeshare = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true

[features]
# Required because typeshare imports things that cannot be used in the canister
generate-types = ["typeshare"]