[package]
name = "dao-discovery-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] } # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.7"