[package]
name = "dao_agency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
candid.workspace = true
serde.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

common = { path = "../common" }

[dev-dependencies]
pocket-ic = "9.0.2"
ic-management-canister-types = "0.3.2"