[package]
name = "dao_association"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0" # Feel free to remove this dependency if you don't need timers
common = { path = "../common" }
# Required otherwise the build will fail because it not find Deserialize derive inside the candid crate
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6"
