[package]
name = "dao_association"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
serde.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

common = { path = "../common" }

typeshare = { workspace = true, optional = true }

[features]
# Required because typeshare imports things that cannot be used in the canister
generate-types = ["typeshare"]